Andy and Rene's data

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,4 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">The Great Branching Assignment   2/27/2023  Enterprise.Net</h1>
     <p>We will look at creating branches in GitHub and then merging the branches.</p>
+    <p>Your missing.   Create a branch based off of main</p>
+    <p>Add your info to the StudentDB class.</p>
+    <p>Add An image in the Images folder</p>
+    <p>Test, commit, Get latest from master, Merg into your brach, Push, Create Pull Request.</p>
 </div>
