--- a/Views/Student/Detail.cshtml
+++ b/Views/Student/Detail.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "View";
 }
 
-<h1>The Student View</h1>
+<h1>The Student View  *** Andy messed this up*****</h1>
 
 <div class="table-responsive">
     <table class="table table-bordered table-hover">
