--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -12,7 +12,9 @@
         <thead>
             <tr>
                 <th>ID</th>
+                <th>Image</th>
                 <th>LastName</th>
+                <th>View</th>
             </tr>
         </thead>
         <tbody>
@@ -21,7 +23,7 @@
                 <tr>
                     <td>@student.ID</td>
                     <td>@student.LastName</td>
-                
+                    <td><img src="~/Images/@student.ImagePath" width="300px"/> </td>
                     <td>
                         <form asp-controller="User" method="post">
                             <input type="submit" asp-controller="Student"  asp-action="Detail" asp-route-id="@student.LastName" value="Details" class="btn btn-outline-secondary" />
