changed images sixe on detail page

--- a/Views/Student/Detail.cshtml
+++ b/Views/Student/Detail.cshtml
@@ -27,5 +27,5 @@
             </tr>
         </tbody>
     </table>
-    <p><img src="~/images/@Model.ImagePath" alt="@Model.ImagePath" /></p>
+    <p><img style="width:1000px; height:800px;" src="~/images/@Model.ImagePath" alt="@Model.ImagePath" /></p>
 </div>
